<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SmartParking</string>
    <string name="speech_prompt">Please tell me your destination&#8230;</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="navigate">Navigate</string>
    <string name="settings">Settings</string>
    <string name="subsettings">Sub Settings</string>
    <string name="action_settings">Settings</string>
    <string name="user_register_login">Register / Login</string>
    <string name="delete">Delete</string>
    <string name="police">Police</string>
    <string name="cctv">CCTV</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="submit">Submit</string>
    <string name="register">New User Register</string>
    <string name="download_title">Download Map File</string>
    <string name="app_status_download">click to download</string>
    <string name="app_status_downloaded">downloaded</string>
    <string name="app_status_download_fail">download fail, click to download again</string>
    
    <!-- <string name="geo">Geocoding</string> -->
    <string name="geo">Address Search Engine</string>
    <string name="map">Map Source</string>
    <string name="by">Travel By</string>
    <string name="navi">Navigation</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="myplaces">My Places</string>
    <string name="common">Common Places</string>
    <string name="home">Home</string>
    <string name="work">Work</string>
    <string name="star">Saved Places</string>
    <string name="parking">Parking</string>
    <string name="parking_nearby">Parking NearBy</string>
    
    <string name="history">History</string>
     
    <!-- Main Nav Drawer Menu Items -->
    <string-array name="menu_items">
        <item >My Places</item>
        <item >History</item>
        <item >Parking</item>
        <item >Settings</item>
        <item >Help</item>
    </string-array>
    <string-array name="geo_items">
        <item >Google</item>
        <item >Nominatim</item>
        <item >MapQuest</item>
        <!-- 
        <item >GraphHopper</item>
        <item >Offline</item>
        -->
    </string-array>
        <string-array name="navi_items">
        <item >OSM</item>
        <item >Google</item>
        <item >MapQuest</item>
        <item >Offline Route</item>
        <!--<item >GraphHopper</item>-->
    </string-array>
    <string-array name="by_items">
        <item >Fast</item>
        <item >Short</item>
        <item >Walk</item>
        <item >Bike</item>
        <item >Bus</item>
    </string-array>
    
    <string-array name="map_items">
        <item >Open Street Map</item>
        <!-- <item >OSM Satellite</item>
        <item >OSM Bus</item>-->
        <item >Offline Map</item> <!-- <item >MapsForge</item>-->
        <item >Mapnik</item>
        <item >Google Roadmap</item>
        <!--<item >Google Satellite</item>-->
        <item >Google Terrain</item>
        <item >Microsoft Maps</item>
        <item >Microsoft Earth</item>
        <item >Microsoft Hybrid</item>
        <!-- <item >Yahoo Roadmap</item> -->
        <!-- <item >Yahoo Satellite</item> -->
    </string-array>
    
    <string-array name="country_items">
        <item >China</item>
        <item >New Zealand</item>
    </string-array>
    <string-array name="country_code_items">
        <item >cn</item>
        <item >nz</item>
    </string-array>
    <string-array name="parking_items">
        <item >1KM</item>
        <item >2KM</item>
        <item >5KM</item>
        <item >My Car</item>
    </string-array>
    
    <string-array name="whats_hot_items">
        <item >Activity</item>
        <item >Sale</item>
    </string-array>
    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_empty</item>
        <!-- <item>@drawable/ic_people</item>
        <item>@drawable/ic_photos</item>
        <item>@drawable/ic_communities</item>
        <item>@drawable/ic_pages</item>
        <item>@drawable/ic_whats_hot</item> -->
    </array>
     
    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
</resources>
