<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
   
	<TextView
		android:id="@+id/tvsettings"
		android:layout_width="match_parent"
		android:layout_height="30dp"
		android:background="#000000"
		android:gravity="center"
		android:text="@string/settings"
		android:textSize="20sp" />
	
	
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
	    <TextView
			android:id="@+id/tv_geo"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:background="#000000"
			android:gravity="center"
			android:text="@string/geo"
			android:textSize="20sp" />
		<Spinner android:id="@+id/sp_geo"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		/>
	</LinearLayout>
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
	    <TextView
			android:id="@+id/tv_map"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:background="#000000"
			android:gravity="center"
			android:text="@string/map"
			android:textSize="20sp" />
		<Spinner android:id="@+id/sp_map"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		/>
	</LinearLayout>
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
	    <TextView
			android:id="@+id/tv_navi"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:background="#000000"
			android:gravity="center"
			android:text="@string/navi"
			android:textSize="20sp" />
		<Spinner android:id="@+id/sp_navi"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		/>
	</LinearLayout>
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
	    <TextView
			android:id="@+id/tv_by"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:background="#000000"
			android:gravity="center"
			android:text="@string/by"
			android:textSize="20sp" />
		<Spinner android:id="@+id/sp_by"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		/>
	</LinearLayout>
<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
	    <Button android:id="@+id/btn_save"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/save"/>
	    <Button android:id="@+id/btn_cancel" 
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/cancel"/>
	</LinearLayout>
</LinearLayout>
