<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
   
	<TextView
		android:id="@+id/tvmyplaces"
		android:layout_width="match_parent"
		android:layout_height="50dp"
		android:background="#000000"
		android:gravity="center"
		android:text="@string/myplaces"
		android:textSize="30sp" />
	
	
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >
	    <TextView
			android:id="@+id/tv_common"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:background="#000000"
			android:gravity="center"
			android:text="@string/common"
			android:textSize="20sp" />
		<TextView
			android:id="@+id/tv_home"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:background="#000000"
			android:gravity="center"
			android:text="@string/home"
			android:textSize="20sp" />
		<TextView
			android:id="@+id/tv_work"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:background="#000000"
			android:gravity="center"
			android:text="@string/work"
			android:textSize="20sp" />
	</LinearLayout>
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >
	    <TextView
			android:id="@+id/tv_star"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:background="#000000"
			android:gravity="center"
			android:text="@string/star"
			android:textSize="20sp" />
		<ListView
            android:id="@+id/list_star_places"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#000000"
            android:choiceMode="singleChoice"/>
	</LinearLayout>
	
</LinearLayout>
