<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="@color/layout_popup_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/point_brief"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@null"
            android:textColor="#000000"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/travel_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="75dp"
            android:contentDescription="@string/navigate"
            android:padding="@dimen/dp_20"
            android:src="@drawable/ic_taxi_48" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/point_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@null"
            android:textColor="#000099"
            android:textSize="18sp" />
        
        <TextView
            android:id="@+id/lat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@null"
            android:textColor="#00000000"
            android:textSize="18sp" />
		<TextView
            android:id="@+id/lng"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@null"
            android:textColor="#00000000"
            android:textSize="18sp" />
    </LinearLayout>

     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="true"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/star"
            android:padding="@dimen/dp_20"
            android:src="@drawable/star_48" />
        
        <ImageView
            android:id="@+id/parking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/parking"
            android:padding="@dimen/dp_20"
            android:src="@drawable/parking_48" />

        <ImageView
            android:id="@+id/home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/home"
            android:padding="@dimen/dp_20"
            android:visibility="gone"
            android:src="@drawable/home_48" />

        <ImageView
            android:id="@+id/work"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/work"
            android:padding="@dimen/dp_20"
            android:visibility="gone"
            android:src="@drawable/office_48" />

        <!-- 
            android:layout_alignParentRight="true"
         	android:layout_marginRight="80dp" -->
    </LinearLayout>

</LinearLayout>